--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "anordinaryusername",
+  "name": "justqnoo",
   "version": "1.0.0",
   "description": "A profile README that kind of looks like a neofetch",
   "main": "index.js",
@@ -10,14 +10,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/AnOrdinaryUsername/AnOrdinaryUsername.git"
+    "url": "git+https://github.com/justqnoo/justqnoo.git"
   },
-  "author": "AnOrdinaryUsername",
+  "author": "justqnoo",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/AnOrdinaryUsername/AnOrdinaryUsername/issues"
+    "url": "https://github.com/justqnoo/justqnoo/issues"
   },
-  "homepage": "https://github.com/AnOrdinaryUsername/AnOrdinaryUsername#readme",
+  "homepage": "https://github.com/justqnoo/justqnoo#readme",
   "dependencies": {
     "@octokit/rest": "^18.5.5",
     "dotenv": "^10.0.0",
